--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit>=1.27.0
-pandas>=1.3.0
-numpy>=1.21.0
-scikit-learn>=1.0.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
-plotly>=5.0.0
-joblib>=1.0.0
-missingno>=0.5.0
+streamlit==1.27.2
+pandas==1.5.3
+numpy==1.24.4
+scikit-learn==1.3.0
+matplotlib==3.7.1
+seaborn==0.13.2
+plotly==5.15.0
+joblib==1.3.2
+missingno==0.5.2
